force-app/main/default/objects/Currency__c/fields/First_Symbol__c.field-meta.xml
<CustomField>
    <fullName>First_Symbol__c</fullName>
    <formula>TRIM(LEFT(Name , FIND(&quot;/&quot;, Name)-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Symbol</label>
    <type>Text</type>
</CustomField>