force-app/main/default/objects/Currency__c/fields/Pip_Size__c.field-meta.xml
<CustomField>
    <fullName>Pip_Size__c</fullName>
    <label>Pip Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>