force-app/main/default/objects/Currency__c/fields/Second_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Second_Symbol__c</fullName>
    <formula>RIGHT( Name , LEN( Name ) - FIND (&quot;/&quot;, Name ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Second Symbol</label>
    <type>Text</type>
</CustomField>