force-app/main/default/objects/Currency__c/recordTypes/Pair.recordType-meta.xml
<RecordType>
    <fullName>Pair</fullName>
    <active>true</active>
    <description>All pairs available on the makret, XXX/YYY</description>
    <label>Pair</label>
</RecordType>